--- a/newFileFormat/newFileFormat/newFileFormat.csproj
+++ b/newFileFormat/newFileFormat/newFileFormat.csproj
@@ -55,9 +55,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestFormTreeView.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="TestFormTreeView.cs" />
     <Compile Include="TestFormTreeView.Designer.cs">
       <DependentUpon>TestFormTreeView.cs</DependentUpon>
     </Compile>
