--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,31 @@ ParserXML/.vs/ParserXML/FileContentIndex/1a974f47-0091-45e0-961e-30939c5555e8.vs
 *.exe
 *.v2
 *.1
+CourseWork/CourseWork/bin/Debug/net6.0-windows/CourseWork.deps.json
+CourseWork/CourseWork/bin/Debug/net6.0-windows/CourseWork.dll
+CourseWork/CourseWork/bin/Debug/net6.0-windows/CourseWork.runtimeconfig.json
+CourseWork/CourseWork/obj/Debug/net6.0-windows/CourseWork.csproj.BuildWithSkipAnalyzers
+CourseWork/CourseWork/obj/Debug/net6.0-windows/CourseWork.csproj.CoreCompileInputs.cache
+CourseWork/CourseWork/obj/Debug/net6.0-windows/CourseWork.csproj.FileListAbsolute.txt
+CourseWork/CourseWork/obj/Debug/net6.0-windows/CourseWork.csproj.GenerateResource.cache
+CourseWork/CourseWork/obj/Debug/net6.0-windows/CourseWork.dll
+CourseWork/CourseWork/obj/Debug/net6.0-windows/CourseWork.genruntimeconfig.cache
+CourseWork/CourseWork/obj/Debug/net6.0-windows/ref/CourseWork.dll
+CourseWork/CourseWork/obj/Debug/net6.0-windows/refint/CourseWork.dll
+newFileFormat/.vs/newFileFormat/v17/.suo
+ParserXML/.vs/ParserXML/v17/.suo
+ParserXML/.vs/ParserXML/v17/.suo
+newFileFormat/.vs/newFileFormat/v17/.suo
+ParserXML/.vs/ParserXML/DesignTimeBuild/.dtbcache.v2
+ParserXML/.vs/ParserXML/v17/.futdcache.v2
+ParserXML/.vs/ParserXML/v17/.suo
+ParserXML/.vs/ProjectEvaluation/parserxml.metadata.v6.1
+ParserXML/.vs/ProjectEvaluation/parserxml.projects.v6.1
+CourseWork/.vs/CourseWork/v17/.suo
+newFileFormat/.vs/newFileFormat/v17/.suo
+ParserXML/.vs/ParserXML/DesignTimeBuild/.dtbcache.v2
+ParserXML/.vs/ParserXML/v17/.futdcache.v2
+ParserXML/.vs/ParserXML/v17/.suo
+ParserXML/.vs/ProjectEvaluation/parserxml.metadata.v6.1
+ParserXML/.vs/ProjectEvaluation/parserxml.projects.v6.1
+CourseWork/.vs/CourseWork/v17/.suo
